# DataStructuresProject

./: CMakeLists.txt  README.md  main.c
Headers/: ActionUndo.h  ActionUndoLink.h  MainWrapper.h  Queue.h  strux.h
HeadersImplementation/: ActionUndo.c  ActionUndoLink.c  MainWrapper.c  Queue.c
